more images added, gallery fixed on all pages

--- a/curation.html
+++ b/curation.html
@@ -114,8 +114,8 @@
 				<p>This is how the tool looked like before the redesign:</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="curation tool before" title="List of findings belonging to a research article" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
-				    <a class="fancybox" rel="curation tool before" title="Form to be completed for each finding" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
+				    <a class="fancybox" rel="curation tool before" title="List of findings belonging to a research article" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2 left_image" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
+				    <a class="fancybox" rel="curation tool before" title="Form to be completed for each finding" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2 right_image with_border" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
                 </div>
 
 				<p>The product has been used with success for a while, but it has started to get more and more
@@ -298,8 +298,8 @@
 					up the screens, removing the unnecessary lines and using visual groupings instead.</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="curation after" title="Home screen with the list of assigned research articles and their status" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
-				    <a class="fancybox" rel="curation after" title="List of findings belonging to a research article" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Home screen with the list of assigned research articles and their status" href="img/curation/after/1.homescreen.png"><img class="gallery2 left_image" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="List of findings belonging to a research article" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2 right_image" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
                 </div>
 
                 <p>The information layering was also improved by means of colors and typography, and also by using icons,
@@ -368,9 +368,9 @@
 					and move the rows so they can bring the groupings up to a visual layer.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="curation after" title="Genotype table with simplified, more compact and better separated rows. The actions are visible only on demand." href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
-				    <a class="fancybox" rel="curation after" title="Option to color and move rows in order to create groups of rows that share similarities" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
-				    <a class="fancybox" rel="curation after" title="Focused row that makes the context switches easier" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
+                    <a class="fancybox" rel="curation after" title="Genotype table with simplified, more compact and better separated rows. The actions are visible only on demand." href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3 left_image" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Option to color and move rows in order to create groups of rows that share similarities" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3 center_image" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Focused row that makes the context switches easier" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3 right_image" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
                 </div>
 
                 <p>The last improvement was making the focused row more visible, to also support context switches between
@@ -386,8 +386,8 @@
                     no restrictions, so users can navigate to whatever part of the application they want.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
-				    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
+                    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2 left_image" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
+				    <a class="fancybox" rel="curation after" title="Breadcrumb navigation with helpful information" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2 right_image" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
                 </div>
 
                 <p>I also decorated the options with additional information needed during navigation, like the
