--- a/network_highlight.html
+++ b/network_highlight.html
@@ -120,22 +120,22 @@
                     The solution preservers the colors and is also scalable by using different levels of transparencies for the adjacent elements.</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="proposal" title="Default view of a network" href="img/network_highlight/fade_default.png"><img class="gallery2" id="proposal_1" src="img/network_highlight/fade_default.png" alt=""/></a>
-				    <a class="fancybox" rel="proposal" title="Faded elements outside of selection" href="img/network_highlight/fade_highlight.png"><img class="gallery2" id="proposal_2" src="img/network_highlight/fade_highlight.png" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Default view of a network" href="img/network_highlight/fade_default.png"><img class="gallery2 left_image" id="proposal_1" src="img/network_highlight/fade_default.png" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Faded elements outside of selection" href="img/network_highlight/fade_highlight.png"><img class="gallery2 right_image" id="proposal_2" src="img/network_highlight/fade_highlight.png" alt=""/></a>
                 </div>
 
                 <p>The second solution is just an enhanced version of the previous one. Instead of changing the transparency abruptly from level to level,
                     I changed it gradually. This still preserves the hierarchy and also creates a 3D effect, lifting up the nodes of interest from the rest of the network</p>
 				<div class="gallery">
-				    <a class="fancybox" rel="proposal" title="Default view with lighter edges" href="img/network_highlight/gradual_default.png"><img class="gallery2" id="proposal_3" src="img/network_highlight/gradual_default.png" alt=""/></a>
-				    <a class="fancybox" rel="proposal" title="Gradually faded elements outside of selection" href="img/network_highlight/gradual_highlight.png"><img class="gallery2" id="proposal_4" src="img/network_highlight/gradual_highlight.png" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Default view with lighter edges" href="img/network_highlight/gradual_default.png"><img class="gallery2 left_image" id="proposal_3" src="img/network_highlight/gradual_default.png" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Gradually faded elements outside of selection" href="img/network_highlight/gradual_highlight.png"><img class="gallery2 right_image" id="proposal_4" src="img/network_highlight/gradual_highlight.png" alt=""/></a>
                 </div>
 
                 <p>The third solution is quite different and it involves surrounding the elements of interest with a yellow glow.
                     Adding more color to an already dense visualization was not helping my case. I fixed it by taking out some of the "chart junk", as Edward Tufte would call it.</p>
 				<div class="gallery">
-				    <a class="fancybox" rel="proposal" title="Default view with thinner edges in the middle" href="img/network_highlight/thin_default.PNG"><img class="gallery2" id="proposal_5" src="img/network_highlight/thin_default.PNG" alt=""/></a>
-				    <a class="fancybox" rel="proposal" title="Glow around selected elements" href="img/network_highlight/thin_highlight.PNG"><img class="gallery2" id="proposal_6" src="img/network_highlight/thin_highlight.PNG" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Default view with thinner edges in the middle" href="img/network_highlight/thin_default.PNG"><img class="gallery2 left_image" id="proposal_5" src="img/network_highlight/thin_default.PNG" alt=""/></a>
+				    <a class="fancybox" rel="proposal" title="Glow around selected elements" href="img/network_highlight/thin_highlight.PNG"><img class="gallery2 right_image" id="proposal_6" src="img/network_highlight/thin_highlight.PNG" alt=""/></a>
                 </div>
 
                 <p>Edges are important, but they use a lot of ink. I reduced the ink usage by taking away some of the color from
@@ -147,9 +147,9 @@
                     the elements of interest are opaque and the rest of the network fades away in the background.</b>
 
 				<div class="gallery">
-					<a class="fancybox" rel="result" title="Default view, before changes" href="img/network_highlight/before_default.PNG"><img class="gallery3" id="result_1" src="img/network_highlight/before_default.PNG" alt=""/></a>
-					<a class="fancybox" rel="result" title="Selection view, before changes" href="img/network_highlight/before_highlight.png"><img class="gallery3" id="result_2" src="img/network_highlight/before_highlight.png" alt=""/></a>
-					<a class="fancybox" rel="result" title="Selection view, after changes" href="img/network_highlight/after_highlight.png"><img class="gallery3" id="result_3" src="img/network_highlight/after_highlight.png" alt=""/></a>
+					<a class="fancybox" rel="result" title="Default view, before changes" href="img/network_highlight/before_default.PNG"><img class="gallery3 left_image" id="result_1" src="img/network_highlight/before_default.PNG" alt=""/></a>
+					<a class="fancybox" rel="result" title="Selection view, before changes" href="img/network_highlight/before_highlight.png"><img class="gallery3 center_image" id="result_2" src="img/network_highlight/before_highlight.png" alt=""/></a>
+					<a class="fancybox" rel="result" title="Selection view, after changes" href="img/network_highlight/after_highlight.png"><img class="gallery3 right_image" id="result_3" src="img/network_highlight/after_highlight.png" alt=""/></a>
 				</div>
 
 				<div>There was another option that was considered in the beginning, but it did not make it into the product because the changes in transparency were too subtle.
