--- a/pvalue.html
+++ b/pvalue.html
@@ -227,8 +227,8 @@
                 <p>His first proposal was a reversed box plot that conveyed where most of the values sit inside the interval.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="finalProposal" title="Box plot definition" href="img/pvalue_chart/stuarts_proposal1.png"><img class="gallery2" id="stuart1" src="img/pvalue_chart/stuarts_proposal1.png" alt="" /></a>
-                    <a class="fancybox" rel="finalProposal" title="Revers box plots used for p value intervals" href="img/pvalue_chart/stuarts_proposal2.png"><img class="gallery2" id="stuart2" src="img/pvalue_chart/stuarts_proposal2.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Box plot definition" href="img/pvalue_chart/stuarts_proposal1.png"><img class="gallery2 left_image" id="stuart1" src="img/pvalue_chart/stuarts_proposal1.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Revers box plots used for p value intervals" href="img/pvalue_chart/stuarts_proposal2.png"><img class="gallery2 right_image" id="stuart2" src="img/pvalue_chart/stuarts_proposal2.png" alt="" /></a>
                 </div>
 
                 <p>An even better set of mockups followed, a version where the box plot was replaced by individual values.
