--- a/quesee.html
+++ b/quesee.html
@@ -129,12 +129,13 @@
 
                 <p>Here are some screenshots with the original application, before it was redesigned:</p>
                 <div class="gallery">
-                    <a class="fancybox" rel="before" title="Homepage" href="img/quesee/before/homepage.png"><img class="gallery3" id="before_1" src="img/quesee/before/homepage.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Test Scenarios" href="img/quesee/before/scenarios.png"><img class="gallery3" id="before_4" src="img/quesee/before/scenarios.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="List of test steps belonging to a scenario" href="img/quesee/before/scenario-view.png"><img class="gallery3" id="before_3" src="img/quesee/before/scenario-view.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Test scenario being executed" href="img/quesee/before/scenario-run.png"><img class="gallery3" id="before_2" src="img/quesee/before/scenario-run.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Detailed view of a test step" href="img/quesee/before/test-view.png"><img class="gallery3" id="before_5" src="img/quesee/before/test-view.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Side by side comparison of test results" href="img/quesee/before/test-run.png"><img class="gallery3" id="before_6" src="img/quesee/before/test-run.png" alt="" /></a>
+                    <a class="fancybox" rel="before" title="Homepage" href="img/quesee/before/homepage.png"><img class="gallery3 left_image with_border" id="before_1" src="img/quesee/before/homepage.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="Test Scenarios" href="img/quesee/before/scenarios.png"><img class="gallery3 center_image with_border" id="before_4" src="img/quesee/before/scenarios.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="List of test steps belonging to a scenario" href="img/quesee/before/scenario-view.png"><img class="gallery3 right_image with_border" id="before_3" src="img/quesee/before/scenario-view.png" alt="" /></a>
+				    <span class="gallery_separator"></span>
+                    <a class="fancybox" rel="before" title="Test scenario being executed" href="img/quesee/before/scenario-run.png"><img class="gallery3 left_image with_border" id="before_2" src="img/quesee/before/scenario-run.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="Detailed view of a test step" href="img/quesee/before/test-view.png"><img class="gallery3 center_image with_border" id="before_5" src="img/quesee/before/test-view.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="Side by side comparison of test results" href="img/quesee/before/test-run.png"><img class="gallery3 right_image with_border" id="before_6" src="img/quesee/before/test-run.png" alt="" /></a>
                 </div>
 				<p>For those of you not familiar with test automation, you can read a short description bellow.</p>
 
@@ -193,14 +194,14 @@
                 <p>I played around the idea of placing a tree of items on the left and a larger area on the right to
                     display more information about the items selected in the tree.</p>
                 <div class="gallery">
-                    <a class="fancybox" rel="sketches" title="Test Suite selection sketch" href="img/quesee/after/sketches/suite.jpg"><img class="gallery3" id="sketches_1" src="img/quesee/after/sketches/suite.jpg" alt="" /></a>
-                    <a class="fancybox" rel="sketches" title="Test Scenario selection sketch" href="img/quesee/after/sketches/scenario.jpg"><img class="gallery3" id="sketches_2" src="img/quesee/after/sketches/scenario.jpg" alt="" /></a>
-                    <a class="fancybox" rel="sketches" title="Test Step selection sketch" href="img/quesee/after/sketches/test.jpg"><img class="gallery3" id="sketches_3" src="img/quesee/after/sketches/test.jpg" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Suite selection sketch" href="img/quesee/after/sketches/suite.jpg"><img class="gallery3 left_image" id="sketches_1" src="img/quesee/after/sketches/suite.jpg" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Scenario selection sketch" href="img/quesee/after/sketches/scenario.jpg"><img class="gallery3 center_image" id="sketches_2" src="img/quesee/after/sketches/scenario.jpg" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Step selection sketch" href="img/quesee/after/sketches/test.jpg"><img class="gallery3 right_image" id="sketches_3" src="img/quesee/after/sketches/test.jpg" alt="" /></a>
                 </div>
                 <p>The tree would display two different groupings of the collection of tests, by Component and by Suite,
                     and would also provide contextual actions on mouse over for each type of item.</p>
                 <div class="gallery">
-                    <a class="fancybox" rel="sketches" title="Test grouping by Component or by Suite" href="img/quesee/after/sketches/explorer.jpg"><img class="gallery3" id="sketches_4" src="img/quesee/after/sketches/explorer.jpg" alt="" style="width: 45%; margin-right:auto; margin-left: auto;"/></a>
+                    <a class="fancybox" rel="sketches" title="Test grouping by Component or by Suite" href="img/quesee/after/sketches/explorer.jpg"><img class="gallery3 left_image" id="sketches_4" src="img/quesee/after/sketches/explorer.jpg" alt="" style="width: 45%; margin-right:auto; margin-left: auto;"/></a>
                 </div>
                 <p>I also wanted to have the most important actions, like recording, replaying and reporting, easy to access
                     and make the state of the application visible all the time, so the users will get better feedback and
@@ -217,9 +218,9 @@
                     wireframes, in order to communicate with the remote team I was working for and ask for their
                     feedback.</p>
                 <div class="gallery">
-                    <a class="fancybox" rel="wireframes" title="Test Suite selection" href="img/quesee/after/wireframes/1.suite_view.png"><img class="gallery3" id="wireframes_1" src="img/quesee/after/wireframes/1.suite_view.png" alt="" /></a>
-                    <a class="fancybox" rel="wireframes" title="Test Scenario selection" href="img/quesee/after/wireframes/2.scenario%20view.png"><img class="gallery3" id="wireframes_2" src="img/quesee/after/wireframes/2.scenario%20view.png" alt="" /></a>
-                    <a class="fancybox" rel="wireframes" title="Test Step selection" href="img/quesee/after/wireframes/3.step_view.png"><img class="gallery3" id="wireframes_3" src="img/quesee/after/wireframes/3.step_view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Test Suite selection" href="img/quesee/after/wireframes/1.suite_view.png"><img class="gallery3 left_image" id="wireframes_1" src="img/quesee/after/wireframes/1.suite_view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Test Scenario selection" href="img/quesee/after/wireframes/2.scenario%20view.png"><img class="gallery3 center_image" id="wireframes_2" src="img/quesee/after/wireframes/2.scenario%20view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Test Step selection" href="img/quesee/after/wireframes/3.step_view.png"><img class="gallery3 right_image" id="wireframes_3" src="img/quesee/after/wireframes/3.step_view.png" alt="" /></a>
                 </div>
                 <p>One of the most important design decision I took to solve the performance issue, was to represent
                     the objects in a hierarchical form, as a tree, and use a progressive disclosure approach when
@@ -230,9 +231,9 @@
                     can choose more easily what part of the object to inspect.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="wireframes" title="Running all tests, the icons from the tree view are updated in real time" href="img/quesee/after/wireframes/4.run_all_view.png"><img class="gallery3" id="wireframes_4" src="img/quesee/after/wireframes/4.run_all_view.png" alt="" /></a>
-                    <a class="fancybox" rel="wireframes" title="Recording tests" href="img/quesee/after/wireframes/5.record_colapsed_view.png"><img class="gallery3" id="wireframes_5" src="img/quesee/after/wireframes/5.record_colapsed_view.png" alt="" /></a>
-                    <a class="fancybox" rel="wireframes" title="Recorded test steps can be expanded to display more detailed information" href="img/quesee/after/wireframes/6.record_expanded_view.png"><img class="gallery3" id="wireframes_6" src="img/quesee/after/wireframes/6.record_expanded_view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Running all tests, the icons from the tree view are updated in real time" href="img/quesee/after/wireframes/4.run_all_view.png"><img class="gallery3 left_image" id="wireframes_4" src="img/quesee/after/wireframes/4.run_all_view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Recording tests" href="img/quesee/after/wireframes/5.record_colapsed_view.png"><img class="gallery3 center_image" id="wireframes_5" src="img/quesee/after/wireframes/5.record_colapsed_view.png" alt="" /></a>
+                    <a class="fancybox" rel="wireframes" title="Recorded test steps can be expanded to display more detailed information" href="img/quesee/after/wireframes/6.record_expanded_view.png"><img class="gallery3 right_image" id="wireframes_6" src="img/quesee/after/wireframes/6.record_expanded_view.png" alt="" /></a>
                 </div>
                 <p>As you can see, the wireframes are not complete and do not cover all the possible scenarios, but this
                     was enough to get the conversation started, get some feedback and start to develop the new user
@@ -260,10 +261,10 @@
                     changes).</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="implementation" title="Test Suite view, not implemented yet" href="img/quesee/after/implementation/1.suite_view.PNG"><img class="gallery4" id="impementation_1" src="img/quesee/after/implementation/1.suite_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Test Scenario view, not implemented yet" href="img/quesee/after/implementation/2.scenario_view.PNG"><img class="gallery4" id="impementation_2" src="img/quesee/after/implementation/2.scenario_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Test Step view" href="img/quesee/after/implementation/3.test_step_view.PNG"><img class="gallery4" id="impementation_3" src="img/quesee/after/implementation/3.test_step_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Editing a test step, the save button is visible only when there are unsaved changes." href="img/quesee/after/implementation/4.test_step_editing.PNG"><img class="gallery4" id="impementation_4" src="img/quesee/after/implementation/4.test_step_editing.PNG" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Test Suite view, not implemented yet" href="img/quesee/after/implementation/1.suite_view.PNG"><img class="gallery4 left_image with_border" id="impementation_1" src="img/quesee/after/implementation/1.suite_view.PNG" alt="" /></a>
+				    <a class="fancybox" rel="implementation" title="Test Scenario view, not implemented yet" href="img/quesee/after/implementation/2.scenario_view.PNG"><img class="gallery4 center_image with_border" id="impementation_2" src="img/quesee/after/implementation/2.scenario_view.PNG" alt="" /></a>
+				    <a class="fancybox" rel="implementation" title="Test Step view" href="img/quesee/after/implementation/3.test_step_view.PNG"><img class="gallery4 center_image with_border" id="impementation_3" src="img/quesee/after/implementation/3.test_step_view.PNG" alt="" /></a>
+				    <a class="fancybox" rel="implementation" title="Editing a test step, the save button is visible only when there are unsaved changes." href="img/quesee/after/implementation/4.test_step_editing.PNG"><img class="gallery4 right_image with_border" id="impementation_4" src="img/quesee/after/implementation/4.test_step_editing.PNG" alt="" /></a>
                 </div>
                 <p>Modifying a test is necessary in situations where the expected result has changed over time and needs
                     to be updated. To do that, the user has to double click an existing value and type in a new one instead,
@@ -288,8 +289,8 @@
                     than it is in the real application).</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="implementation" title="Recording tests, the dimmer items represent duplicated steps that will not be recorded" href="img/quesee/after/implementation/7.recording_sceanrio.PNG"><img class="gallery2" id="impementation_7" src="img/quesee/after/implementation/7.recording_sceanrio.PNG" alt="" /></a>
-                    <a class="fancybox" rel="implementation" title="Running a test suite" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery2" id="impementation_5" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Recording tests, the dimmer items represent duplicated steps that will not be recorded" href="img/quesee/after/implementation/7.recording_sceanrio.PNG"><img class="gallery2 left_image with_border" id="impementation_7" src="img/quesee/after/implementation/7.recording_sceanrio.PNG" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Running a test suite" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery2 right_image with_border" id="impementation_5" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
                 </div>
                 <h3>Comparing Objects</h3>
 
@@ -302,9 +303,9 @@
                     I used the same visual cue found in most spell checkers to convey that something is wrong.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the yellow rows stand for unexpected change of values" href="img/quesee/after/implementation/6.exploring_test_failure1.png"><img class="gallery3" id="comparison_1" src="img/quesee/after/implementation/6.exploring_test_failure1.png" alt="" /></a>
-                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the blue rows stand for unexpected additions" href="img/quesee/after/implementation/6.exploring_test_failure2.png"><img class="gallery3" id="comparison_2" src="img/quesee/after/implementation/6.exploring_test_failure2.png" alt="" /></a>
-                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the red rows stand for unexpected deletions" href="img/quesee/after/implementation/6.exploring_test_failure3.png"><img class="gallery3" id="comparison_3" src="img/quesee/after/implementation/6.exploring_test_failure3.png" alt="" /></a>
+                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the yellow rows stand for unexpected change of values" href="img/quesee/after/implementation/6.exploring_test_failure1.png"><img class="gallery3 left_image" id="comparison_1" src="img/quesee/after/implementation/6.exploring_test_failure1.png" alt="" /></a>
+                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the blue rows stand for unexpected additions" href="img/quesee/after/implementation/6.exploring_test_failure2.png"><img class="gallery3 center_image" id="comparison_2" src="img/quesee/after/implementation/6.exploring_test_failure2.png" alt="" /></a>
+                    <a class="fancybox" rel="comparison" title="Test failure, the dotted red lines guide you to towards the failure, the red rows stand for unexpected deletions" href="img/quesee/after/implementation/6.exploring_test_failure3.png"><img class="gallery3 right_image" id="comparison_3" src="img/quesee/after/implementation/6.exploring_test_failure3.png" alt="" /></a>
                 </div>
 
                 <p>This is very different from the side by side view of the
@@ -323,8 +324,8 @@
                 <p>and I ended up implementing this version:</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="implementation" title="Execution Reports view implementation" href="img/quesee/after/implementation/8.reports_view.PNG"><img class="gallery2" id="impementation_8" src="img/quesee/after/implementation/8.reports_view.PNG" alt="" /></a>
-                    <a class="fancybox" rel="implementation" title="Expanded execution report" href="img/quesee/after/implementation/9.reports_expanded.PNG"><img class="gallery2" id="impementation_9" src="img/quesee/after/implementation/9.reports_expanded.PNG" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Execution Reports view implementation" href="img/quesee/after/implementation/8.reports_view.PNG"><img class="gallery2 left_image with_border" id="impementation_8" src="img/quesee/after/implementation/8.reports_view.PNG" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Expanded execution report" href="img/quesee/after/implementation/9.reports_expanded.PNG"><img class="gallery2 right_image with_border" id="impementation_9" src="img/quesee/after/implementation/9.reports_expanded.PNG" alt="" /></a>
                 </div>
 
                 <p>The good thing about the implemented solution, is that is uses the same flat and clean design and also consistent colors, icons and interactions.</p>
