--- a/test_history.html
+++ b/test_history.html
@@ -161,7 +161,7 @@
 					a knob would display details about the test execution in a separate panel.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Horizontal line with test executions" href="img/test_history/1.png"><img class="borderless_image gallery1" id="test_history_1" src="img/test_history/1.1.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Horizontal line with test executions" href="img/test_history/1.png"><img class="gallery1 with_border" id="test_history_1" src="img/test_history/1.1.png" alt="" /></a>
                 </div>
 
 				<p>To make this look more like a time line, I decorated it with a starting delimiter and an arrow that
@@ -170,7 +170,7 @@
 					established representation of the time.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Time line with an arrow to indicate the direction of the time flow and labels to describe the moments in time" href="img/test_history/2.png"><img class="borderless_image gallery1" id="test_history_2" src="img/test_history/2.2.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Time line with an arrow to indicate the direction of the time flow and labels to describe the moments in time" href="img/test_history/2.png"><img class="gallery1 with_border" id="test_history_2" src="img/test_history/2.2.png" alt="" /></a>
                 </div>
 
 				<p>This is pretty good so far, but there are still questions that are not easy to answer using this
@@ -180,7 +180,7 @@
 					the test at each moment, so that the user would not need to remember anything.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Emphasized state transitions with the knob colors replicated onto the line" href="img/test_history/3.png"><img class="borderless_image gallery1" id="test_history_3" src="img/test_history/3.3.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Emphasized state transitions with the knob colors replicated onto the line" href="img/test_history/3.png"><img class="gallery1 with_border" id="test_history_3" src="img/test_history/3.3.png" alt="" /></a>
                 </div>
 
 				<p>I was getting close, but still could not tell at a glace where were the state transitions. The colors
@@ -190,7 +190,7 @@
 					in time.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Thicker line that communicates the test results even better" href="img/test_history/4.png"><img class="borderless_image gallery1" id="test_history_4" src="img/test_history/4.4.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Thicker line that communicates the test results even better" href="img/test_history/4.png"><img class="gallery1 with_border" id="test_history_4" src="img/test_history/4.4.png" alt="" /></a>
                 </div>
 
 				<p>There was one more thing I was not happy about. I wanted to provide a more accurate assessment for the
@@ -200,7 +200,7 @@
 					visualization to reflect this and I made the transitions smoother by using gradients.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="State transitions happen between test executions, this is a more accurate representation" href="img/test_history/5.png"><img class="borderless_image gallery1" id="test_history_5" src="img/test_history/5.5.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="State transitions happen between test executions, this is a more accurate representation" href="img/test_history/5.png"><img class="gallery1 with_border" id="test_history_5" src="img/test_history/5.5.png" alt="" /></a>
                 </div>
 
 				<p>I was pretty happy with the widget at that time, but as time went by and test executions started to
@@ -209,7 +209,7 @@
 					liked what Google Finance did for their stock price charts, so I did the same.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Time span selector added to the top" href="img/test_history/6.png"><img class="borderless_image gallery1" id="test_history_6" src="img/test_history/6.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Time span selector added to the top" href="img/test_history/6.png"><img class="gallery1 with_border" id="test_history_6" src="img/test_history/6.png" alt="" /></a>
                 </div>
 
 				<p>Unfortunately, the time span selection was not very flexible and there were parts of the visualization
@@ -218,7 +218,7 @@
 					Points were also overlapping and it became hard to select a specific point from a group.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="The widget became unusable after a while" href="img/test_history/7.png"><img class="borderless_image gallery1" id="test_history_7" src="img/test_history/7.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="The widget became unusable after a while" href="img/test_history/7.png"><img class="gallery1 with_border" id="test_history_7" src="img/test_history/7.png" alt="" /></a>
                 </div>
 
 				<p>Even though the widget became unusable after a while, I still believed there were some good ideas in
@@ -241,7 +241,7 @@
 					flexibility in selecting the time span and also very few steps to achieve that.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Flexible horizontal scroll bar for a better selection of the time span" href="img/test_history/8.png"><img class="borderless_image gallery1" id="test_history_8" src="img/test_history/8.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Flexible horizontal scroll bar for a better selection of the time span" href="img/test_history/8.png"><img class="gallery1 with_border" id="test_history_8" src="img/test_history/8.png" alt="" /></a>
                 </div>
 
 				<p>Another big problem was the cluttered view when test executions were too close and started to
@@ -252,7 +252,7 @@
 					version.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="The dotted rectangles are clusters of executions that can be expanded by clicking them" href="img/test_history/9.png"><img class="borderless_image gallery1" id="test_history_9" src="img/test_history/9.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="The dotted rectangles are clusters of executions that can be expanded by clicking them" href="img/test_history/9.png"><img class="gallery1 with_border" id="test_history_9" src="img/test_history/9.png" alt="" /></a>
                 </div>
 
 				<p>Clicking on the last exception link would bring the widget in the following state, where the last
@@ -260,7 +260,7 @@
 					item is not hidden inside a group.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="The blue bar is a selected test execution" href="img/test_history/10.png"><img class="borderless_image gallery1" id="test_history_10" src="img/test_history/10.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="The blue bar is a selected test execution" href="img/test_history/10.png"><img class="gallery1 with_border" id="test_history_10" src="img/test_history/10.png" alt="" /></a>
                 </div>
 
 				<p>This is the version used now in production and I am proud to say I did not only designed the widget,
@@ -277,7 +277,7 @@
 					data points less visible.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="More subtle data points as a future improvement" href="img/test_history/11.png"><img class="borderless_image gallery1" id="test_history_11" src="img/test_history/11.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="More subtle data points as a future improvement" href="img/test_history/11.png"><img class="gallery1 with_border" id="test_history_11" src="img/test_history/11.png" alt="" /></a>
                 </div>
 
 				<p>Hovering over the chart would reveal the vertical rectangles so that they can be clicked. There is a
@@ -286,14 +286,14 @@
 					want to select a test execution.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="The points would become fully visible on mouse over" href="img/test_history/12.png"><img class="borderless_image gallery1" id="test_history_12" src="img/test_history/12.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="The points would become fully visible on mouse over" href="img/test_history/12.png"><img class="gallery1 with_border" id="test_history_12" src="img/test_history/12.png" alt="" /></a>
                 </div>
 
 				<p>Another improvement is in the way time is displayed on the scroll bar. Years and months are not enough
 					when you zoom in a lot, days and hours are more suited for that kind of scenario.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="group" title="Time divisions in tune with the zoom level" href="img/test_history/13.png"><img class="borderless_image gallery1" id="test_history_13" src="img/test_history/13.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Time divisions in tune with the zoom level" href="img/test_history/13.png"><img class="gallery1 with_border" id="test_history_13" src="img/test_history/13.png" alt="" /></a>
                 </div>
 
 				<p>Maybe one of the most important lessons I learned during this project was to test the design with
