--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -155,9 +155,10 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%202.png" alt="" /></a>
+				</div>
 
 				<div id="disqus_thread"></div>
 				<script>
